--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -3,7 +3,22 @@ body {
   color: #666666;
   font-family: "Open Sans", sans-serif;
 }
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+    background-color: #111;
+}
 
+body::-webkit-scrollbar {
+    width: 12px;
+    background-color: #111;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #18d36e;
+}
 a {
   color: #398F3B;
   transition: 0.5s;
